# table-demo

./: README.md  docker-compose.yml
services/backend/: .coveragerc  .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
services/backend/app/: main.py
services/backend/app/api/accounts/: __init__.py  routes.py
services/backend/app/api/accounts/models/: pydantic.py
services/backend/app/models_shared/: enums.py  pydantic.py
services/backend/config/: settings.py
services/backend/tests/integration/: conftest.py
services/backend/tests/integration/test_api/: test_assignments.py
services/backend/tests/integration/test_app/: test_main.py
services/frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
services/frontend/src/: app.html  app.postcss
services/frontend/src/lib/generated-client/: runtime.ts
services/frontend/src/lib/generated-client/.openapi-generator/: FILES
services/frontend/src/lib/generated-client/apis/: DefaultApi.ts
services/frontend/src/lib/generated-client/models/: AccountData.ts  AccountType.ts  index.ts
services/frontend/src/lib/utils/: createTable.ts  email-link.svelte
services/frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
services/frontend/src/routes/(components)/: boop.svelte  column-filter.svelte  column-visibility.svelte  header-area.svelte  index.ts  main-nav.svelte  notification.svelte  search.svelte  sidebar-toggle.svelte  sidebar.svelte  table-toolbar.svelte  user-nav.svelte  version-switcher.svelte
(+1 files in other folders)
