[tool.poetry]
name = "table-demo"
version = "0.1.0"
description = "Table Demo"
authors = ["roostad"]
readme = "README.md"
packages = [{include = "table-demo"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = {extras = ["all"], version = "^0.101.1"}
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
